--- a/Flag/Base.lproj/Main.storyboard
+++ b/Flag/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="landscape">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,99 +14,109 @@
             <objects>
                 <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="RFj-Dn-yrx">
-                                <rect key="frame" x="54.5" y="20" width="558" height="335"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="RFj-Dn-yrx" userLabel="Main Stack View">
+                                <rect key="frame" x="20" y="40" width="335" height="607"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5pX-AV-pIJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="558" height="180.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AE7-A9-0B4" userLabel="Flag Lines SV">
+                                        <rect key="frame" x="0.0" y="0.0" width="167.5" height="607"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Stars" translatesAutoresizingMaskIntoConstraints="NO" id="Zu5-1t-yZi">
-                                                <rect key="frame" x="0.0" y="0.0" width="254" height="180.5"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" image="Stars" translatesAutoresizingMaskIntoConstraints="NO" id="Zu5-1t-yZi">
+                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="236.5"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Zu5-1t-yZi" secondAttribute="height" multiplier="167:236" id="MeF-vp-S2P"/>
                                                     <constraint firstAttribute="width" secondItem="Zu5-1t-yZi" secondAttribute="height" multiplier="493:350" id="Yut-Rt-Fa5"/>
                                                 </constraints>
+                                                <variation key="heightClass=compact-widthClass=compact">
+                                                    <mask key="constraints">
+                                                        <exclude reference="MeF-vp-S2P"/>
+                                                    </mask>
+                                                </variation>
+                                                <variation key="heightClass=regular-widthClass=compact" image="StarsRotated">
+                                                    <mask key="constraints">
+                                                        <exclude reference="Yut-Rt-Fa5"/>
+                                                    </mask>
+                                                </variation>
                                             </imageView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="xcL-6j-FRp">
-                                                <rect key="frame" x="254" y="0.0" width="304" height="180.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="xcL-6j-FRp" userLabel="Flags's Lines SV">
+                                                <rect key="frame" x="0.0" y="236.5" width="167.5" height="370.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L4i-It-XTF">
-                                                        <rect key="frame" x="0.0" y="0.0" width="304" height="26"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="370.5"/>
                                                         <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sH-D4-SYm">
-                                                        <rect key="frame" x="0.0" y="26" width="304" height="25.5"/>
+                                                        <rect key="frame" x="24" y="0.0" width="24" height="370.5"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7A-8A-R8Q">
-                                                        <rect key="frame" x="0.0" y="51.5" width="304" height="26"/>
+                                                        <rect key="frame" x="48" y="0.0" width="24" height="370.5"/>
                                                         <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Wg-5A-iTR">
-                                                        <rect key="frame" x="0.0" y="77.5" width="304" height="25.5"/>
+                                                        <rect key="frame" x="72" y="0.0" width="23.5" height="370.5"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQ3-Bl-pz5">
-                                                        <rect key="frame" x="0.0" y="103" width="304" height="26"/>
+                                                        <rect key="frame" x="95.5" y="0.0" width="24" height="370.5"/>
                                                         <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QkD-jz-wRG">
-                                                        <rect key="frame" x="0.0" y="129" width="304" height="25.5"/>
+                                                        <rect key="frame" x="119.5" y="0.0" width="24" height="370.5"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mu6-ce-Y3d">
-                                                        <rect key="frame" x="0.0" y="154.5" width="304" height="26"/>
+                                                        <rect key="frame" x="143.5" y="0.0" width="24" height="370.5"/>
                                                         <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                                     </view>
                                                 </subviews>
+                                                <variation key="heightClass=regular-widthClass=compact" axis="horizontal"/>
                                             </stackView>
                                         </subviews>
+                                        <variation key="heightClass=regular-widthClass=compact" axis="vertical" distribution="fill"/>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="CMd-j4-ein">
-                                        <rect key="frame" x="0.0" y="180.5" width="558" height="154.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="CMd-j4-ein" userLabel="Lines SV">
+                                        <rect key="frame" x="167.5" y="0.0" width="167.5" height="607"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wa4-DP-6fd">
-                                                <rect key="frame" x="0.0" y="0.0" width="558" height="25.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="28" height="607"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8S8-IG-dmM">
-                                                <rect key="frame" x="0.0" y="25.5" width="558" height="26"/>
+                                                <rect key="frame" x="28" y="0.0" width="28" height="607"/>
                                                 <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mQ-hT-BYp">
-                                                <rect key="frame" x="0.0" y="51.5" width="558" height="25.5"/>
+                                                <rect key="frame" x="56" y="0.0" width="28" height="607"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VF1-v5-AYz">
-                                                <rect key="frame" x="0.0" y="77" width="558" height="26"/>
+                                                <rect key="frame" x="84" y="0.0" width="27.5" height="607"/>
                                                 <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q2E-Ad-KfJ">
-                                                <rect key="frame" x="0.0" y="103" width="558" height="25.5"/>
+                                                <rect key="frame" x="111.5" y="0.0" width="28" height="607"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gb4-TJ-RGJ">
-                                                <rect key="frame" x="0.0" y="128.5" width="558" height="26"/>
+                                                <rect key="frame" x="139.5" y="0.0" width="28" height="607"/>
                                                 <color key="backgroundColor" red="0.87549084420000001" green="0.05704569072" blue="0.01178972516" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                         </subviews>
+                                        <variation key="heightClass=regular-widthClass=compact" axis="horizontal"/>
                                     </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="Wa4-DP-6fd" firstAttribute="height" secondItem="L4i-It-XTF" secondAttribute="height" id="3TA-Jm-cVd"/>
-                                    <constraint firstAttribute="width" secondItem="RFj-Dn-yrx" secondAttribute="height" multiplier="5:3" id="tp9-bC-MFT"/>
-                                </constraints>
+                                <variation key="heightClass=regular-widthClass=compact" axis="horizontal"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="RFj-Dn-yrx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BWn-8c-edc"/>
-                            <constraint firstAttribute="bottom" secondItem="RFj-Dn-yrx" secondAttribute="bottom" constant="20" id="bEG-jN-uag"/>
-                            <constraint firstItem="RFj-Dn-yrx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="iyv-BR-8vP"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="RFj-Dn-yrx" secondAttribute="trailing" constant="20" id="tvI-Vg-EzU"/>
-                            <constraint firstItem="RFj-Dn-yrx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="usN-T4-uqA"/>
+                            <constraint firstAttribute="bottom" secondItem="RFj-Dn-yrx" secondAttribute="bottom" constant="20" id="awO-q0-S1V"/>
+                            <constraint firstItem="RFj-Dn-yrx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="cVW-z5-nPP"/>
+                            <constraint firstAttribute="trailing" secondItem="RFj-Dn-yrx" secondAttribute="trailing" constant="20" id="rZD-rS-6Ka"/>
+                            <constraint firstItem="RFj-Dn-yrx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uy1-xS-gmK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -118,5 +128,6 @@
     </scenes>
     <resources>
         <image name="Stars" width="493" height="350"/>
+        <image name="StarsRotated" width="350" height="493"/>
     </resources>
 </document>
